[project]
name = "pyspedas"
description = "Python Space Physics Environment Data Analysis Software (pySPEDAS)"
authors = [{ name = "Jim Lewis", email = "jwl@ssl.berkeley.edu" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dynamic = ["version"]

dependencies = [
    "numpy>=1.20.0",
    "requests",
    "cdflib",
    "pytplot-mpl-temp>=2.2.49",
    "cdasws>=1.7.24",
    "netCDF4",
    "astropy",
    "scipy",
]

[project.optional-dependencies]
analysis = ["geopack>=1.0.11", "pywavelets"]
client = ["viresclient", "hapiclient>=0.2.2"]
dev = ["ipython"]

[project.urls]
Documentation = "https://pyspedas.readthedocs.io"
Information = "http://spedas.org/wiki"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
default = ["dev", "analysis", "client"]

[tool.pixi.dependencies]
netcdf4 = "*"
